fixed broken style at landing

--- a/Frontend/src/styles/landing.css
+++ b/Frontend/src/styles/landing.css
@@ -9,7 +9,6 @@
 #stripe {
     background-color: #3b517c;
     color: white;
-    margin-top: 0.7cm;
     padding: 30px;
     text-align: center;
     width: 100vw;
